<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ProjectLauncher"
    android:columnCount="1"
    android:rowCount="4"
    android:orientation="vertical"
    android:id="@+id/main_layout">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/button0"
            android:layout_weight="1"
            android:background="#7CB342"
            android:layout_margin="5dp"
            android:text="@string/spotify"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/button1"
            android:layout_weight="1"
            android:background="#7CB342"
            android:layout_margin="5dp"
            android:text="@string/scores"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/button2"
            android:layout_weight="1"
            android:background="#689F38"
            android:layout_margin="5dp"
            android:text="@string/library"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/button3"
            android:layout_weight="1"
            android:background="#689F38"
            android:layout_margin="5dp"
            android:text="@string/build_bigger"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:layout_weight="1"
        android:background="#558B2F"
        android:layout_margin="5dp"
        android:text="@string/xyz"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        android:layout_weight="1"
        android:background="#33691E"
        android:layout_margin="5dp"
        android:text="@string/capstone"/>
</LinearLayout>
